Passe de dette : cinq « low » qui n'en étaient plus, et sept constats devenus faux
Cinquante gates QA accumulent des observations basses. Relues d'un bloc,
cinq n'étaient plus des observations mais des défauts — le contexte avait
changé — et sept décrivaient un état du code qui n'existe plus.

Corrigés :

SEL-001 — pinAt ne s'arrêtait pas au nœud du dessus : le pin d'un nœud
RECOUVERT se saisissait à travers, et le lien apparaissait en sortant
d'un nœud au hasard. Il s'arrête maintenant au plus haut nœud qui
contient le point ; hors de toute boîte il continue, car le rayon de
saisie déborde des boîtes.

WIRE-001 — un câblage refusé était un no-op silencieux. Le validateur
produisait pourtant déjà la phrase exacte (« la sortie d'exécution est
déjà connectée ») : applyTracked la jetait. Elle remonte, se consomme une
fois, et s'affiche en barre d'action.

LIT-002 — la molette compte en long ; sur un pin int elle poussait le
tampon au-delà d'Integer.MAX_VALUE et laissait un champ rouge que seule
une saisie manuelle pouvait sauver. Un cran de trop et la valeur était
perdue.

PAL-004 — un nœud en favori apparaît deux fois. La recherche par
identité ramenait toujours la première : cliquer sa ligne dans la
catégorie surlignait celle des favoris et faisait remonter la liste tout
en haut. Correspondance par position, dans les deux sens.

DEMO-001 — /blueprint demo annonçait « créé et exporté » même quand
l'écriture disque avait échoué, envoyant le joueur chercher un fichier
absent. Message distinct, qui précise que le blueprint marche quand même.

Et sept constats réécrits parce qu'ils étaient devenus faux : le
défilement des panneaux (5.5, 5.6b, 5.10) est livré depuis la 5.12, le
verrou optimiste (5.9) depuis la 6.3, et « aucun test client » (1.6) ne
tient plus depuis l'épic 5. Un gate qui décrit un code disparu ne
protège plus rien.

Build vert, 5 gametests verts.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>